--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
    <head th:replace="layout/site-header">
-      <title>Sidejobs - Worker Registration</title>
+      <title>SideJobs - Worker Registration</title>
    </head>
-   <body>
+<body>
+ <div th:replace="layout/site-navigation"></div>
+
    This is the index page................
-   </body>
+</body>
 </html>
