--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,12 +11,13 @@
 			<div class="col-sm-5 col-md-5">
 				<h3>Login</h3>
 				<br/>
-				<div class="input-group input-group-lg">
-  					<input ng-model="email" type="email" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="sizing-addon1" autofocus="true"/>
+				<div class="form-group">
+					<label class="site-font-small">Email</label>
+  					<input ng-model="email" type="email" class="form-control" aria-label="Email" aria-describedby="sizing-addon1" autofocus="true"/>
 				</div>
-				<br/>
-				<div class="input-group input-group-lg">
-  					<input ng-model="password" type="password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="sizing-addon1"/>
+				<div class="form-group">
+					<label class="site-font-small">Password</label>
+  					<input ng-model="password" type="password" class="form-control" aria-label="Password" aria-describedby="sizing-addon1"/>
 				</div>
 					<br/>	
 				<button type="button" class="btn btn-success border-dark" ng-click="submit()"><i class="fa fa-check fa-1x " style="color:white" aria-hidden="true"></i> Submit</button>     <button type="button" class="btn btn-light border-dark" ng-click="clear()"><i class="fa fa-close fa-1x " style="color:black" aria-hidden="true"></i> Clear</button>
