--- a/src/main/resources/templates/registration/worker-registration.html
+++ b/src/main/resources/templates/registration/worker-registration.html
@@ -11,37 +11,39 @@
 			<div class="col-sm-5 col-md-5">
 				<h3>Create a new account</h3>
 				<br/>
-				<div class="input-group input-group-lg">
-  					<input ng-model="firstname" type="text" class="form-control" placeholder="First Name" aria-label="First Name" aria-describedby="sizing-addon1"/>
+				<form>
+				<div class="form-group">
+					<label class="site-font-small">First Name</label>
+  					<input ng-model="firstname" type="text" class="form-control" aria-label="First Name" aria-describedby="sizing-addon1"/>
 				</div>
-				<br/>
-				<div class="input-group input-group-lg">
-  					<input ng-model="lastname" type="text" class="form-control" placeholder="Last Name" aria-label="Last Name" aria-describedby="sizing-addon1"/>
+				<div class="form-group">
+					<label class="site-font-small">Last Name</label>
+  					<input ng-model="lastname" type="text" class="form-control" aria-label="Last Name" aria-describedby="sizing-addon1"/>
 				</div>
-				<br/>
-				<br/>
-				<div class="input-group input-group-lg">
-  					<input ng-model="email" type="email" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="sizing-addon1"/>
+				<br/><br/>
+				<div class="form-group">
+					<label class="site-font-small">Email</label>
+  					<input ng-model="email" type="email" class="form-control" aria-label="Email" aria-describedby="sizing-addon1"/>
 				</div>
-				<br/>
-				<div class="input-group input-group-lg">
-  					<input ng-model="password" type="password" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="sizing-addon1"/>
+				<div class="form-group">
+					<label class="site-font-small">Password</label>
+  					<input ng-model="password" type="password" class="form-control"  aria-label="Password" aria-describedby="sizing-addon1"/>
 				</div>
-				<br/>
-				<div class="input-group input-group-lg">
-  					<input ng-model="confirm_password" type="password" class="form-control" placeholder="Confirm Password" aria-label="Confirm Password" aria-describedby="sizing-addon1"/>
+				<div class="form-group">
+					<label class="site-font-small" for="exampleFormControlTextarea1">Confirm Password</label>
+  					<input ng-model="confirm_password" type="password" class="form-control" aria-label="Confirm Password" aria-describedby="sizing-addon1"/>
 				</div>
-				<br/>
 				<br/>
 				<div ng-model="category_alert" class="alert alert-secondary" role="alert">
 					<i class="fa fa-info-circle fa-1x " aria-hidden="true"></i> Please note that you will receive a confirmation link by email to confirm your registration.
 				</div>
-				<br/><br/>
+				<br/>
 				<div ng-model="loading_bar" ng-hide="hideLoading" class="progress">
   					<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"><strong>Please wait...</strong></div>
 				</div>
 				<br/>	
-				<button type="button" class="btn btn-success border-dark" ng-click="submit()"><i class="fa fa-check fa-1x " style="color:white" aria-hidden="true"></i> Submit</button>     <button type="button" class="btn btn-light border-dark"><i class="fa fa-close fa-1x " style="color:black" aria-hidden="true"></i> Clear</button>								
+				<button ng-click="submit()" type="button" class="btn btn-success border-dark"><i class="fa fa-check fa-1x " style="color:white" aria-hidden="true"></i> Submit</button>     <button  ng-click="clear()" type="button" class="btn btn-light border-dark"><i class="fa fa-close fa-1x " style="color:black" aria-hidden="true"></i> Clear</button>								
+				</form>
 			</div>
 		</div>
 	</div>
